# satnet_transfer

./: .gitignore  .gitmodules  LICENSE  README.md  example.py  gpu_interact  main.py  pyproject.toml  run  submit  temp_batch  torch_cuda
data/: CBS_k3_n100_m403_b10_420_mask.npz  CBS_k3_n100_m403_b10_919_mask.npz  CBS_k3_n100_m403_b10_930_mask.npz  CBS_k3_n100_m403_b10_999_masked.npz  aim-100-2_0-yes1-2_mask.npz  aim-100-3_4-yes1-1_mask.npz  aim-100-3_4-yes1-4_mask.npz  aim-100-6_0-yes1-1_mask.npz  aim-200-2_0-yes1-4_mask.npz  aim-50-2_0-yes1-4_mask.npz  anomaly_mask.npz  bw_large.a_mask.npz  bw_large.b_mask.npz  bw_large.c_mask.npz  bw_large.d_mask.npz  hanoi4_mask.npz  hanoi5_mask.npz  huge_mask.npz  medium_mask.npz
metrics/: CBS_k3_n100_m403_b10_420_mask.csv  CBS_k3_n100_m403_b10_919_mask.csv  CBS_k3_n100_m403_b10_930_mask.csv  CBS_k3_n100_m403_b10_999_masked.csv  CBS_k3_n100_m403_b10_999_solutions.csv  aim-100-2_0-yes1-2_mask.csv  aim-100-3_4-yes1-1_mask.csv  aim-100-3_4-yes1-4_mask.csv  aim-200-2_0-yes1-4_mask.csv  aim-50-2_0-yes1-4_mask.csv  enddr2-10-by-5-8_mask.csv  hanoi5_mask.csv  logistics.a_mask.csv  logistics.b_mask.csv  logistics.c_mask.csv  logistics.d_mask.csv
metrics_old/: basic.csv  bw_large.b_mask.csv  bw_large.c_mask.csv  bw_large.d_mask.csv  huge_mask.csv  medium_mask.csv
satnet_transfer/: dataset.py  download.py  loop.py  settings.py
satnet_transfer/dataset/: __init__.py  base_dataset.py  generate.py
scripts/: analyze.py  create_selected_datasets.py  download.py  generate_dataset.py  load_checkpoint.py  main.py  tri_modal_gauss.py
