[tool.poetry]
name = "satnet_transfer"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
python-sat = {extras = ["pblib", "aiger"], version = "^0.1.7-alpha.19"}
rich = "^12.6.0"
requests = "^2.28.1"
numpy = "^1.23.4"
satnet = {git = "https://github.com/locuslab/SATNet"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
