[tool.poetry]
name = "satnet_transfer"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
rich = "^12.6.0"
requests = "^2.28.1"
numpy = "^1.23.4"
satnet = {git = "https://github.com/locuslab/SATNet"}
seaborn = "^0.12.0"

# torch = { version = '1.12.1+cu116', source = "pytorch" }
# torchvision = { version = '1.12.1+cu116', source = "pytorch" }
# torchaudio = { version = '1.12.1+cu116', source = "pytorch" }

# [[tool.poetry.source]]
#     name = "pytorch"
#     url = "https://download.pytorch.org/whl/cu116"
#     secondary = true
#     default = false

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
